# NexusRealtime-Rust

./: .gitignore  Cargo.toml  Makefile  README.md  build-branch.txt  build-rerun.txt  build.json  memory.md  rust-toolchain.toml
.agent/: change-log.md  feedback.md  goal.md  intention.md  memory.md  start-here.md  workflow.md
.agent/feedback-packets/: README.md
.agent/goal-packets/: 2026-06-30-macos-app-and-platform-dylibs.md  2026-07-01-universal-nexusrealtime-packager.md  README.md
.github/workflows/: build-apk.yml  ci.yml
app/android/: README.md  settings.gradle
app/android-webview/: settings.gradle
crates/nexus-adaptive-host/: Cargo.toml
crates/nexus-android-bridge/: Cargo.toml
crates/nexus-asset-pack/: Cargo.toml
crates/nexus-dsk-manifest/: Cargo.toml  README.md
crates/nexus-host-ffi/: Cargo.toml
crates/nexus-openxr-host/: Cargo.toml
crates/nexus-packager/: Cargo.toml
crates/nexus-project-loader/: Cargo.toml
crates/nexus-quest-surface/: Cargo.toml
crates/nexus-render-gles/: Cargo.toml
crates/nexus-sequence/: Cargo.toml
crates/nexus-static-server/: Cargo.toml
docs/: QUEST_OPENXR_ONE_GO_IMPLEMENTATION_PLAN.md  WEBXR_ADAPTER.md
local-kits/: ARCHITECTURE.md  PROMOTION_MAP.md  README.md  native-host-domain-kits.mjs
scripts/: build-apk.sh  build-macos-app.sh  clone-goldrush-sample.sh  ensure-gradle.sh  package-android-webview.sh  package-downloads.sh  package-electron-web-app.sh  package-host-ffi.sh  package-ios-sim-webview.sh  package-macos-web-app.sh  package-nexus-project.sh  record-package-output.py  write-download-page.py
(+45 files in other folders)
