[workspace]
members = [
  "crates/nexus-command-buffer",
  "crates/nexus-sequence",
  "crates/nexus-dsk-manifest",
  "crates/nexus-host",
  "crates/nexus-android-bridge",
  "crates/nexus-quest-surface"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
jni = "0.21"
